@@ -1,6 +1,8 @@
 Changes to Version 2.0-21
 
-    o Added has.intercept.multinom() to make Anova() work with multinom objects fit to a dichotomous response (after bug report by Kristian Hovde Liland).
+    o Fixed a bug in gamLine with non-canonical links. (Thanks to Hani Christoph)
+
+    O Added has.intercept.multinom() to make Anova() work with multinom objects fit to a dichotomous response (after bug report by Kristian Hovde Liland).
 
     o Replaced vif.lm() with vif.default() to cover wider variety of models (after question by Laura Rigg about gls models).
 
